--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -83,6 +83,27 @@ The lessons learned during the development of this work will be remarked and com
     \begin{subfigure}{.65\textwidth}
       \centering
       \hspace*{-3.5cm} 
+      \includegraphics[width=0.95\linewidth]{../../matrices/exxRap8.png}
+      %\caption[]{Matrix}
+      \label{fig:exxRap8_matrix}
+    \end{subfigure}%
+    \begin{subfigure}{.65\textwidth}
+      \centering
+      \hspace*{-6.0cm} 
+      \includegraphics[page=3, width=0.95\linewidth]{../plots/blackPanther.pdf}
+      %\caption{Performance.}
+      \label{fig:exxRap8_performance}
+    \end{subfigure}
+\caption{Matrix: exxRap8}
+\label{fig:Freescale1}
+\end{figure}
+
+\begin{figure} [ht!]
+    \centering
+    \captionsetup{justification=centering, singlelinecheck=false}
+    \begin{subfigure}{.65\textwidth}
+      \centering
+      \hspace*{-3.5cm} 
       \includegraphics[width=0.95\linewidth]{../../matrices/Freescale1.png}
       %\caption[]{Matrix}
       \label{fig:Freescale1_matrix}
@@ -90,7 +111,7 @@ The lessons learned during the development of this work will be remarked and com
     \begin{subfigure}{.65\textwidth}
       \centering
       \hspace*{-6.0cm} 
-      \includegraphics[page=3, width=0.95\linewidth]{../plots/blackPanther.pdf}
+      \includegraphics[page=4, width=0.95\linewidth]{../plots/blackPanther.pdf}
       %\caption{Performance.}
       \label{fig:Freescale1_performance}
     \end{subfigure}
@@ -111,7 +132,7 @@ The lessons learned during the development of this work will be remarked and com
     \begin{subfigure}{.65\textwidth}
       \centering
       \hspace*{-6.0cm} 
-      \includegraphics[page=4, width=0.95\linewidth]{../plots/blackPanther.pdf}
+      \includegraphics[page=5, width=0.95\linewidth]{../plots/blackPanther.pdf}
       %\caption{Performance.}
       \label{fig:parabolic_fem_performance}
     \end{subfigure}
@@ -132,7 +153,7 @@ The lessons learned during the development of this work will be remarked and com
     \begin{subfigure}{.65\textwidth}
       \centering
       \hspace*{-6.0cm} 
-      \includegraphics[page=5, width=0.95\linewidth]{../plots/blackPanther.pdf}
+      \includegraphics[page=6, width=0.95\linewidth]{../plots/blackPanther.pdf}
       %\caption{Performance.}
       \label{fig:rajat30_performance}
     \end{subfigure}
@@ -154,7 +175,7 @@ The lessons learned during the development of this work will be remarked and com
     \begin{subfigure}{.65\textwidth}
       \centering
       \hspace*{-6.0cm} 
-      \includegraphics[page=6, width=0.95\linewidth]{../plots/blackPanther.pdf}
+      \includegraphics[page=7, width=0.95\linewidth]{../plots/blackPanther.pdf}
       %\caption{Performance.}
       \label{fig:ship_001_performance}
     \end{subfigure}
@@ -175,7 +196,7 @@ The lessons learned during the development of this work will be remarked and com
     \begin{subfigure}{.65\textwidth}
       \centering
       \hspace*{-6.0cm} 
-      \includegraphics[page=7, width=0.95\linewidth]{../plots/blackPanther.pdf}
+      \includegraphics[page=8, width=0.95\linewidth]{../plots/blackPanther.pdf}
       %\caption{Performance.}
       \label{fig:Si34H36_performance}
     \end{subfigure}
@@ -196,7 +217,7 @@ The lessons learned during the development of this work will be remarked and com
     \begin{subfigure}{.65\textwidth}
       \centering
       \hspace*{-6.0cm} 
-      \includegraphics[page=8, width=0.95\linewidth]{../plots/blackPanther.pdf}
+      \includegraphics[page=9, width=0.95\linewidth]{../plots/blackPanther.pdf}
       %\caption{Performance.}
       \label{fig:stomach_performance}
     \end{subfigure}
@@ -217,7 +238,7 @@ The lessons learned during the development of this work will be remarked and com
     \begin{subfigure}{.65\textwidth}
       \centering
       \hspace*{-6.0cm} 
-      \includegraphics[page=9, width=0.95\linewidth]{../plots/blackPanther.pdf}
+      \includegraphics[page=10, width=0.95\linewidth]{../plots/blackPanther.pdf}
       %\caption{Performance.}
       \label{fig:Transport_performance}
     \end{subfigure}
